--- a/hamburger-menu/index.html
+++ b/hamburger-menu/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,16 +7,23 @@
     <title>Build a fully-responsive, progressively enhanced burger menu</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
-    <link rel="stylesheet" href="css/global.css" />
+    <!-- Put these in order of specificity, least specificity at top, most specificity at bottom. -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/modern-css-reset/dist/reset.min.css"
+    />
+    <link rel="stylesheet" href="/css/global.css" />
+    <link href="./css/hamburger-menu.css" rel="stylesheet" />
+    
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Halant:wght@600&family=Hind:wght@400;500;700&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Halant:wght@600&family=Hind:wght@400;500;700&display=swap"
     />
   </head>
   <body>
     <!-- Javascript -->
-    <script src="js/burger-menu.js" type="module" defer></script>
+    <script src="js/hamburger-menu.js" type="module" defer></script>
   </body>
 </html>
