--- a/navbar-hideOnScroll/index.html
+++ b/navbar-hideOnScroll/index.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      body {
-        margin: 0;
-        background-color: #f1f1f1;
-        font-family: Arial, Helvetica, sans-serif;
-      }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Build a fully-responsive, progressively enhanced burger menu</title>
 
-      #navbar {
-        background-color: #333;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        display: block;
-        transition: top 0.3s;
-      }
+    <!-- Styles -->
+    <!-- Put these in order of specificity, least specificity at top, most specificity at bottom. -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/modern-css-reset/dist/reset.min.css"
+    />
+    <link rel="stylesheet" href="/css/global.css" />
+    <link href="css/navbar-hideOnScroll.css" rel="stylesheet" />
 
-      #navbar a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 15px;
-        text-decoration: none;
-        font-size: 17px;
-      }
-
-      #navbar a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-    </style>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Halant:wght@600&family=Hind:wght@400;500;700&display=swap"
+    />
   </head>
   <body>
     <div id="navbar">
@@ -41,7 +29,7 @@
       <a href="#contact">Contact</a>
     </div>
 
-    <div style="padding: 15px 15px 2500px; font-size: 30px; margin-top: 30px">
+    <div style="border: none; padding: 15px 15px 2500px; font-size: 30px; margin-top: 50px">
       <p>
         <b
           >This example demonstrates how to hide a navbar when the user starts
@@ -69,18 +57,7 @@
         officia deserunt mollit anim id est laborum.
       </p>
     </div>
-
-    <script>
-      var prevScrollpos = window.pageYOffset;
-      window.onscroll = function () {
-        var currentScrollPos = window.pageYOffset;
-        if (prevScrollpos > currentScrollPos) {
-          document.getElementById("navbar").style.top = "0";
-        } else {
-          document.getElementById("navbar").style.top = "-50px";
-        }
-        prevScrollpos = currentScrollPos;
-      };
-    </script>
+    <!-- Javascript -->
+    <script src="js/navbar-hideOnScroll.js" type="module" defer></script>
   </body>
 </html>
