--- a/hamburger-menu/index.html
+++ b/hamburger-menu/index.html
@@ -13,7 +13,7 @@
       href="https://unpkg.com/modern-css-reset/dist/reset.min.css"
     />
     <link rel="stylesheet" href="/css/global.css" />
-    <link href="./css/hamburger-menu.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/burger-menu.css" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -24,6 +24,6 @@
   </head>
   <body>
     <!-- Javascript -->
-    <script src="js/hamburger-menu.js" type="module" defer></script>
+    <script src="js/burger-menu.js" type="module" defer></script>
   </body>
 </html>
