--- a/hamburger-menu/index.html
+++ b/hamburger-menu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Build a fully-responsive, progressively enhanced burger menu</title>
+    <title>Burger menu</title>
 
     <!-- Styles -->
     <!-- Put these in order of specificity, least specificity at top, most specificity at bottom. -->
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="/css/global.css" />
     <link rel="stylesheet" href="./css/burger-menu.css" />
-    
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -22,7 +22,41 @@
       href="https://fonts.googleapis.com/css2?family=Halant:wght@600&family=Hind:wght@400;500;700&display=swap"
     />
   </head>
+
   <body>
+
+    <header class="site-head" role="banner">
+      <a href="#main-content" class="skip-link">Skip to content</a>
+      <div class="wrapper">
+        <div class="site-head__inner">
+          <a href="/" aria-label="ACME home" class="site-head__brand">
+            <img src="images/logo.svg" alt="ACME logo" />
+          </a>
+          <burger-menu max-width="600">
+            <nav class="navigation" aria-label="primary">
+              <ul role="list">
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">About</a>
+                </li>
+                <li>
+                  <a href="#">Our Work</a>
+                </li>
+                <li>
+                  <a href="#">Contact Us</a>
+                </li>
+                <li>
+                  <a href="#">Your account</a>
+                </li>
+              </ul>
+            </nav>
+          </burger-menu>
+        </div>
+      </div>
+    </header>
+
     <!-- Javascript -->
     <script src="js/burger-menu.js" type="module" defer></script>
   </body>
