--- a/hamburger-menu/index.html
+++ b/hamburger-menu/index.html
@@ -23,8 +23,9 @@
     />
   </head>
 
+  <!-- Begin Body -->
   <body>
-
+    <!-- Begin Header -->
     <header class="site-head" role="banner">
       <a href="#main-content" class="skip-link">Skip to content</a>
       <div class="wrapper">
@@ -56,6 +57,36 @@
         </div>
       </div>
     </header>
+
+    <!-- Begin Main -->
+    <main id="main-content" tabindex="-1" class="wrapper">
+      <article class="post flow">
+        <h1>A responsive, progressively enhanced burger menu</h1>
+        <p>
+          Burger menus are a relic of responsive design that no matter what your
+          opinion of them is, they continue to be a dominant design pattern.
+          They’re very good at preserving often-limited horizontal space, but
+          they also, more often than not, are built in a user-hostile,
+          non-accessible fashion.
+        </p>
+        <p>
+          <a
+            href="https://piccalil.li/premium/build-a-fully-responsive-progressively-enhanced-burger-menu"
+            >In this premium tutorial</a
+          >, we’re going to build a burger menu from the ground up, using
+          progressive enhancement, `ResizeObserver`, `Proxy` state and of
+          course, super-solid HTML and CSS that pull from the CUBE CSS
+          principles.
+        </p>
+        <p>
+          This whole page is what you’re building in the tutorial 👆.
+          <a
+            href="https://piccalil.li/premium/build-a-fully-responsive-progressively-enhanced-burger-menu"
+            >Let’s dive in</a
+          >
+        </p>
+      </article>
+    </main>
 
     <!-- Javascript -->
     <script src="js/burger-menu.js" type="module" defer></script>
