--- a/hamburger-menu/index.html
+++ b/hamburger-menu/index.html
@@ -59,6 +59,7 @@
     </header>
 
     <!-- Begin Main -->
+    <!-- Using tabindex="-1" prevents the user from being able to tab to the element with their keyboard too, so it’s really helpful with focus management of interactive elements. -->
     <main id="main-content" tabindex="-1" class="wrapper">
       <article class="post flow">
         <h1>A responsive, progressively enhanced burger menu</h1>
