Comment out debug styles in html boilerplate

--- a/html-base-boilerplate/boilerplate.html
+++ b/html-base-boilerplate/boilerplate.html
@@ -39,12 +39,12 @@
   
   <meta name="theme-color" content="#FF00FF">
   
-  <!-- TODO: Use these debug styles as needed -->
+  <!-- TODO: Use these debug styles as needed
   <style>
     * { box-sizing: border-box; }
     
     *:focus { outline: 2px solid red; }
-  </style>
+  </style> -->
 </head>
 
 <body>
