--- a/html-base-boilerplate/boilerplate.html
+++ b/html-base-boilerplate/boilerplate.html
@@ -62,6 +62,8 @@
   <main></main>
   <footer></footer>
   
-  <script src="" type="module"></script>
+  <!-- TODO: Add or remove JavaScript
+   
+  <script src="" type="module"></script> -->
 </body>
 </html>
