Remove incomplete burger menu styles; add global styles to css directory; update index links; minor formatting

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
   </head>
   <body>
     <header>
-      <h1></h1>
+      <h1>Design Patterns Index</h1>
       <nav aria-label="Main">
         <ul>
           <li><a href="" aria-current="page">Current Page</a></li>
-          <li><a href="">Another Page</a></li>
-          <li><a href="">Another Page</a></li>
-          <li><a href="">Another Page</a></li>
+          <li><a href="/burger-menu/burger-menu-00">Burger Menu - Original</a></li>
+          <li><a href="/burger-menu/burger-menu-01">Burger Menu - alexrmann.com</a></li>
         </ul>
       </nav>
     </header>
