--- a/boilerplate/aria-landmarks-mdn/index.html
+++ b/boilerplate/aria-landmarks-mdn/index.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
+  
 <!-- 
 
 From MDN Blog, "Using HTML landmark roles to improve accessibility"
@@ -15,5 +15,11 @@ https://developer.mozilla.org/en-US/blog/aria-accessibility-html-landmark-roles/
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mr. Pineapple's Pizzeria</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a class="logo" href="/">
+        <span class="visually-hidden">Mr. Pineapple's Pizzeria</span>
+      </a>
+    </header>
+  </body>
 </html>
