Add search landmark

--- a/boilerplate/aria-landmarks-mdn/index.html
+++ b/boilerplate/aria-landmarks-mdn/index.html
@@ -26,6 +26,15 @@ https://developer.mozilla.org/en-US/blog/aria-accessibility-html-landmark-roles/
           <li><a href="/contact">Get in touch</a></li>
         </ul>
       </nav>
+      <search>
+        <form name="site-search" action="/search" method="get">
+          <label for="query">Find your perfect pizza</label>
+          <input type="search" id="query" name="query" />
+          
+          <!-- Optional submit button -->
+          <input type="submit" value="Search" />
+        </form>
+      </search>
     </header>
   </body>
 </html>
