Add main landmark

--- a/boilerplate/aria-landmarks-mdn/index.html
+++ b/boilerplate/aria-landmarks-mdn/index.html
@@ -36,5 +36,6 @@ https://developer.mozilla.org/en-US/blog/aria-accessibility-html-landmark-roles/
         </form>
       </search>
     </header>
+    <main></main>
   </body>
 </html>
