Add complementary landmark

--- a/boilerplate/aria-landmarks-mdn/index.html
+++ b/boilerplate/aria-landmarks-mdn/index.html
@@ -52,5 +52,14 @@ https://developer.mozilla.org/en-US/blog/aria-accessibility-html-landmark-roles/
         </ul>
       </section>
     </main>
+    <aside aria-labelledby="pizza-recipe-heading">
+      <h3 id="pizza-recipe-heading">Make your own pie!</h3>
+      <p>Below is a list of our favorite pizza recipes.</p>
+      <ul>
+        <li><a href="/mushroom-pizza">The shroom</a></li>
+        <li><a href="/smokey-joe">Smokey Joe</a></li>
+        <li><a href="/fromage">Fromage</a></li>
+      </ul>
+    </aside>
   </body>
 </html>
