Add contentinfo landmark

--- a/boilerplate/aria-landmarks-mdn/index.html
+++ b/boilerplate/aria-landmarks-mdn/index.html
@@ -62,7 +62,9 @@ https://developer.mozilla.org/en-US/blog/aria-accessibility-html-landmark-roles/
       </ul>
     </aside>
     <div class="newsletter">
-      <h3 id="newsletter-subscribe-form">Subscribe to Mr. Pineapple's newsletter</h3>
+      <h3 id="newsletter-subscribe-form">
+        Subscribe to Mr. Pineapple's newsletter
+      </h3>
       <p>
         In our newsletter, you can expect even more wonderful pizza recipes, all
         featuring the versatile pineapple.
@@ -79,5 +81,8 @@ https://developer.mozilla.org/en-US/blog/aria-accessibility-html-landmark-roles/
         <button type="submit">Pineapple Me 🍍</button>
       </form>
     </div>
+    <footer>
+      <p>Copyright &copy; Mr. Pineapple's Pizzeria - 2023</p>
+    </footer>
   </body>
 </html>
