Implement base styles with partially functioning light-dark mode

--- a/css/colors-gradients/gradients.html
+++ b/css/colors-gradients/gradients.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gradients</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gradients</title>
+
+    <!-- Turn on light and dark mode -->
+    <meta name="color-scheme" content="light dark">
+
+    <!-- Base style and gradients -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="gradients.css" />
+  </head>
+  <body>
+    <div class="background-gradient-light"></div>
+<!--     <div class="background-gradient-dark"></div> -->
+  </body>
 </html>
