Use media queries to change gradient color scheme

--- a/css/colors-gradients/gradients.html
+++ b/css/colors-gradients/gradients.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="gradients.css" />
   </head>
   <body>
-    <div class="background-gradient-light"></div>
-<!--     <div class="background-gradient-dark"></div> -->
+    <div class="background-gradient"></div>
   </body>
 </html>
