--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <li><a href="/components">Components</a></li>
             <li><a href="/css">Stylesheets</a></li>
             <li><a href="/layouts">Page Layouts</a></li>
+            <li><a href="/scripts">Scripts</a></li>
+            <li><a href="/themes">Themes</a></li>
           </ul>
         </nav>
       </div>
