Add home link to Prototypes; Add clarifying comments to Modal prototype

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="/components">Components</a></li>
             <li><a href="/css">Stylesheets</a></li>
             <li><a href="/layouts">Page Layouts</a></li>
+            <li><a href="/prototypes/">Prototypes</a></li>
             <li><a href="/scripts">Scripts</a></li>
             <li><a href="/themes">Themes</a></li>
           </ul>
