--- a/scripts/light-dark/light-dark-radios/index.html
+++ b/scripts/light-dark/light-dark-radios/index.html
@@ -10,16 +10,6 @@
     <link rel="stylesheet" href="/scripts/light-dark/light-dark.css" />
   </head>
   <body>
-
-    <!-- BUTTONS -->
-    <p>
-      <button id="autoSwitch" type="button" onclick="switchAuto()">Auto</button>
-      <button id="lightSwitch" type="button" onclick="switchLight()">
-        Light
-      </button>
-      <button id="darkSwitch" type="button" onclick="switchDark()">Dark</button>
-    </p>
-
     <!-- RADIOS -->
     <fieldset>
       <legend>Select a color mode:</legend>
@@ -55,6 +45,6 @@
         <label for="dark">Dark</label>
       </div>
     </fieldset>
-    <script src="light-dark-buttons-radios.js"></script>
+    <script src="light-dark-radios.js"></script>
   </body>
 </html>
