Improve layout styling for typography index

--- a/css/typography/index.html
+++ b/css/typography/index.html
@@ -8,25 +8,57 @@
     <link rel="stylesheet" href="typography.css" />
     <link rel="stylesheet" href="clamped-type.css" />
   </head>
-  <body style="margin: 0 auto;">
-    <main style="max-width: 1200px;">
-    <h1 class="font-heading">Heading 1</h1>
-    <p class="font-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae tenetur consectetur labore doloribus qui impedit fugit, quasi mollitia, fuga cumque nulla! Dolore voluptatum enim unde possimus magnam corporis fugiat. Deserunt!</p>
+  <body style="padding: 1em">
+    <main style="max-width: 100ch; margin: 0 auto">
+      <div class="container">
+        <h1 class="font-heading">Heading 1</h1>
+        <p class="font-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae
+          tenetur consectetur labore doloribus qui impedit fugit, quasi
+          mollitia, fuga cumque nulla! Dolore voluptatum enim unde possimus
+          magnam corporis fugiat. Deserunt!
+        </p>
 
-    <h2 class="font-heading">Heading 2</h2>
-    <p class="font-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit voluptates harum culpa? Molestiae commodi deserunt quo earum omnis facere. Minus eum sapiente iure incidunt nihil, recusandae harum ducimus nulla.</p>
+        <h2 class="font-heading">Heading 2</h2>
+        <p class="font-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit
+          voluptates harum culpa? Molestiae commodi deserunt quo earum omnis
+          facere. Minus eum sapiente iure incidunt nihil, recusandae harum
+          ducimus nulla.
+        </p>
 
-    <h3 class="font-heading">Heading 3</h3>
-    <p class="font-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ducimus ad provident delectus, odio doloremque vero veritatis illo voluptatem natus veniam commodi perferendis fugiat ullam error totam soluta dolore sequi!</p>
+        <h3 class="font-heading">Heading 3</h3>
+        <p class="font-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ducimus
+          ad provident delectus, odio doloremque vero veritatis illo voluptatem
+          natus veniam commodi perferendis fugiat ullam error totam soluta
+          dolore sequi!
+        </p>
 
-    <h4 class="font-heading">Heading 4</h4>
-    <p class="font-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, error? Dolorem, aliquam consectetur. Magnam voluptas aut pariatur nisi, quia quam eius quasi tenetur corporis, veritatis, perferendis error itaque libero. Porro!</p>
+        <h4 class="font-heading">Heading 4</h4>
+        <p class="font-body">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, error?
+          Dolorem, aliquam consectetur. Magnam voluptas aut pariatur nisi, quia
+          quam eius quasi tenetur corporis, veritatis, perferendis error itaque
+          libero. Porro!
+        </p>
 
-    <h5 class="font-heading">Heading 5</h5>
-    <p class="font-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, error? Dolorem, aliquam consectetur. Magnam voluptas aut pariatur nisi, quia quam eius quasi tenetur corporis, veritatis, perferendis error itaque libero. Porro!</p>
+        <h5 class="font-heading">Heading 5</h5>
+        <p class="font-body">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, error?
+          Dolorem, aliquam consectetur. Magnam voluptas aut pariatur nisi, quia
+          quam eius quasi tenetur corporis, veritatis, perferendis error itaque
+          libero. Porro!
+        </p>
 
-    <h6 class="font-heading">Heading 6</h6>
-    <p class="font-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, error? Dolorem, aliquam consectetur. Magnam voluptas aut pariatur nisi, quia quam eius quasi tenetur corporis, veritatis, perferendis error itaque libero. Porro!</p>
+        <h6 class="font-heading">Heading 6</h6>
+        <p class="font-body">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, error?
+          Dolorem, aliquam consectetur. Magnam voluptas aut pariatur nisi, quia
+          quam eius quasi tenetur corporis, veritatis, perferendis error itaque
+          libero. Porro!
+        </p>
+      </div>
     </main>
   </body>
 </html>
