Shift line length styling to container and switch to max-inline-size

--- a/css/typography/index.html
+++ b/css/typography/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="clamped-type.css" />
   </head>
   <body style="padding: 1em">
-    <main style="max-width: 100ch; margin: 0 auto">
-      <div class="container">
+    <main>
+      <div class="container" style="max-inline-size: 75ch; margin: 0 auto">
         <h1 class="font-heading">Heading 1</h1>
         <p class="font-body">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae
