Format quotation marks and introduce semantic styling of text elements; Include blockquote styles

--- a/css/typography/index.html
+++ b/css/typography/index.html
@@ -10,7 +10,7 @@
   </head>
   <body style="padding: 1em">
     <main>
-      <div class="container" style="max-inline-size: 75ch; margin: 0 auto">
+      <article class="container single-column">
         <h1 class="font-heading">Heading 1</h1>
         <p class="font-body">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae
@@ -28,6 +28,13 @@
         </p>
 
         <h3 class="font-heading">Heading 3</h3>
+        <p class="font-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ducimus
+          ad provident delectus, odio doloremque vero veritatis illo voluptatem
+          natus veniam commodi perferendis fugiat ullam error totam soluta
+          dolore sequi!
+        </p>
+        <blockquote class="font-blockquote">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, magnam? Esse, impedit sapiente iste assumenda mollitia corporis adipisci molestias nihil quos earum eaque eligendi commodi reiciendis qui deleniti, distinctio dolorem!</blockquote>
         <p class="font-body">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ducimus
           ad provident delectus, odio doloremque vero veritatis illo voluptatem
